bk_ida/gccida/g1/ix86_split_fp_branch
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8352:29: error: must use 'enum' tag to refer to type 'rtx_code'
void  ix86_split_fp_branch( rtx_code code, rtx op1, rtx op2, rtx target1, rtx target2, rtx tmp) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8373:4: error: expected ';' after expression
rtx v28; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8373:5: error: use of undeclared identifier 'v28'
rtx v28; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8376:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8376:5: error: use of undeclared identifier 'v31'
rtx v31; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8377:4: error: expected ';' after expression
rtx v32; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8377:5: error: use of undeclared identifier 'v32'
rtx v32; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8381:4: error: expected ';' after expression
rtx i; // [rsp+0h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8381:5: error: use of undeclared identifier 'i'
rtx i; // [rsp+0h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8385:4: error: expected ';' after expression
rtx bypass; // [rsp+10h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8385:5: error: use of undeclared identifier 'bypass'
rtx bypass; // [rsp+10h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8386:4: error: expected ';' after expression
rtx second; // [rsp+18h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8386:5: error: use of undeclared identifier 'second'
rtx second; // [rsp+18h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8396:53: error: use of undeclared identifier 'second'
v11 = ix86_expand_fp_compare( code, op1, op2, tmp, &second, &bypass); 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8396:62: error: use of undeclared identifier 'bypass'
v11 = ix86_expand_fp_compare( code, op1, op2, tmp, &second, &bypass); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8400:7: error: use of undeclared identifier 'bypass'
v13 = bypass; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8403:7: error: use of undeclared identifier 'bypass'
if ( !bypass ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8409:7: error: use of undeclared identifier 'bypass'
v13 = bypass; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/i386.c:8410:7: error: use of undeclared identifier 'bypass'
if ( !bypass ) 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_fp_branch/src/obj/i386.o] Error 1
